# UmbraTest

./: .clang-format  .gitignore  CMakeLists.txt  compile_commands.json
include/umbra/: test-case.hpp  test-debug.hpp  test-group.hpp  test-log.hpp  test-macro-helpers.hpp  test-registry.hpp  test-runner.hpp  test.h  test.hpp  test_assertions.hpp  test_c.h  test_case.h  test_container.h  test_cpp.hpp  test_debug.hpp  test_group.h  test_log.h  test_log.hpp  test_macro_helpers.h  test_registry.h  test_runner.h
src/: test-group.cpp  test-registry.cpp  test-runner.cpp  test_case.c  test_container.c  test_group.c  test_registry.c  test_runner.c  test_runner.cpp
test/: example.test.cpp  test_main.cpp
